# libcamera-opencv

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
samples/: CMakeLists.txt  raw_fps.cpp  sample.cpp  sample_minimal.cpp
src/: CMakeLists.txt  camera_capture_impl.cpp  camera_capture_impl.hpp  libcamera_cv.cpp  libcamera_cv.hpp
